# spark-k8s-application

./: .env  Cargo.toml  README-cn.md  README.md  deny.toml  deploy.sh
crates/common/: Cargo.toml
crates/common/src/: lib.rs  logging.rs  utils.rs
crates/crd/: Cargo.toml
crates/crd/src/: constants.rs  lib.rs  metadata.rs  s3.rs  sko_spark_application.rs  spark_application.rs
crates/operator-bin/: Cargo.toml
crates/operator-bin/src/: controller.rs  error.rs  main.rs  sko_application_controller.rs  sko_schd_application_controller.rs  spark_job_controller.rs  spark_schd_job_controller.rs  spark_session_controller.rs
deploy/: values-s3-docker-io.yaml
deploy/helm/spark-operator/: Chart.yaml  README-BN.md  values.yaml
deploy/helm/spark-operator/crds/: bn-spark-crds.yaml
deploy/helm/spark-operator/templates/: bn-deployment.yaml  deployment.yaml  rbac.yaml
docker/: Dockerfile  Dockerfile-spark-3.1.1  Dockerfile-spark-3.1.1-hadoop3  Dockerfile-spark-3.1.3  Dockerfile-spark-3.2.4  Dockerfile-spark-3.2.4-hadoop3  Dockerfile-spark-3.3.3  Dockerfile-spark-3.4.1  Dockerfile-with-builder  README.md  build-image.sh
docker/conf/: log4j-debug.properties  log4j.properties
docker/entrypoints/: entrypoint-3.1.1.sh  entrypoint-3.1.3.sh  entrypoint-3.2.4.sh  entrypoint-3.4.1.sh  sko-spark-operator-entrypoint.sh  spark-operator-entrypoint.sh
docker/spark-operator/: Dockerfile-sko-spark-template
examples/: job-spark-sql-341-example.yaml  job-spark-sqlfile-341-example.yaml  pi-job-example.yaml  schdjob-spark-sqlfile-341-example.yaml  session-spark-sql-341-example-template.yaml  session-spark-sql-341-example.yaml  simple-session-example.yaml  spark-template-341.yaml
examples/sql/: tripdata-report-hive-cat.sql  tripdata-report.sql
java/: pom.xml
java/src/main/java/org/apache/spark/sql/hive/thriftserver/: SparkSqlHiveThrift2.java  SparkSqlScriptCli.java
